welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: illegal start of simple expression
  while (!estFaceMur() && !estSurBiscuit()))
                                           ^